# lightning

./: Makefile.am  Makefile.in  aclocal.m4  arm.c  configure  configure.ac  lightning.h
build-aux/: lightning.m4
contrib/check/: Makefile.am  README  alu.inc  alu_add.tst  alu_and.tst  alu_div.tst  alu_hmul.tst  alu_lsh.tst  alu_mod.tst  alu_mul.tst  alu_neg.tst  alu_not.tst  alu_or.tst  alu_rsb.tst  alu_rsh.tst  alu_sub.tst  alu_xor.tst  alux_add.tst  alux_sub.tst  args.tst  autogen.sh  bottles.tst  branch.inc  branch.tst  branch_cmp.tst  c_call.tst  call.tst  carry.tst  clobber.tst  configure  configure.ac  consts.inc  cvt.tst  fcvt.tst  float_branch.inc  fop_abs.tst  fop_atan.tst  fop_cos.tst  fop_log.tst  fop_log10.tst  (+26 more)
contrib/cjit/: Makefile.am  Makefile.in  README  cjit.c  cjit.h  cjit_alloc.c  cjit_data.c  cjit_debug.c  cjit_emit.c  cjit_error.c  cjit_eval.c  cjit_expr.c  cjit_hash.c  cjit_parser.c  cjit_range.c  cjit_read.c  cjit_stack.c  cjit_type.c  configure  configure.ac  thunder.c  thunder.h
doc/: Makefile.in  lightningize.1  porting.texi  version.texi
lightning/: Makefile.am  Makefile.in  asm-common.h  core-common.h  fp-common.h
lightning/arm/: Makefile.frag  arm.c  asm.h  core.h  fp-soft.h  fp-swf.h  fp-vfp.h  fp.h  funcs.h
lightning/i386/: Makefile.frag  asm-32.h  asm-64.h  asm.h  core-32.h  core-64.h  core.h  fp-32.h  fp-64.h  fp-sse.h  fp-x87.h  fp.h  funcs.h
lightning/mips/: asm.h  core-32.h  core-64.h  core.h  fp-32.h  fp-64.h  fp.h  funcs.h  mips.c
lightning/ppc/: asm.h  core.h  fp.h  funcs.h
lightning/sparc/: core.h
opcode/: Makefile.in
tests/: 3to2.c  Makefile.am  Makefile.in  add.c  allocai.c  bp.c  divi.c  fib.c  fibdelay.c  fibit.c  funcfp.c  incr.c  ldst.c  ldxi.c  modi.c  movi.c  printf.c  printf2.c  push-pop.c  ret.c  rpn.c  rpnfp.c  sete.c  testfp.c
